src/nephyr/zephyr/kernel/zk_msgqueue.nim


## *
##  @brief Send a mailbox message in an asynchronous manner.
##
##  This routine sends a message to @a mbox without waiting for a receiver
##  to process it. The message data may be in a buffer, in a memory pool block,
##  or non-existent (i.e. an empty message). Optionally, the semaphore @a sem
##  will be given when the message has been both received and completely
##  processed by the receiver.
##
##  @param mbox Address of the mailbox.
##  @param tx_msg Address of the transmit message descriptor.
##  @param sem Address of a semaphore, or NULL if none is needed.
##
##  @return N/A
##
proc k_mbox_async_put*(mbox: ptr k_mbox; tx_msg: ptr k_mbox_msg; sem: ptr k_sem) {.
    importc: "k_mbox_async_put", header: "kernel.h".}


## *
##  @brief Receive a mailbox message.
##
##  This routine receives a message from @a mbox, then optionally retrieves
##  its data and disposes of the message.
##
##  @param mbox Address of the mailbox.
##  @param rx_msg Address of the receive message descriptor.
##  @param buffer Address of the buffer to receive data, or NULL to defer data
##                retrieval and message disposal until later.
##  @param timeout Waiting period for a message to be received,
##                 or one of the special values K_NO_WAIT and K_FOREVER.
##
##  @retval 0 Message received.
##  @retval -ENOMSG Returned without waiting.
##  @retval -EAGAIN Waiting period timed out.
##
proc k_mbox_get*(mbox: ptr k_mbox; rx_msg: ptr k_mbox_msg; buffer: pointer;
                timeout: k_timeout_t): cint {.importc: "k_mbox_get",
    header: "kernel.h".}


## *
##  @brief Retrieve mailbox message data into a buffer.
##
##  This routine completes the processing of a received message by retrieving
##  its data into a buffer, then disposing of the message.
##
##  Alternatively, this routine can be used to dispose of a received message
##  without retrieving its data.
##
##  @param rx_msg Address of the receive message descriptor.
##  @param buffer Address of the buffer to receive data, or NULL to discard
##                the data.
##
##  @return N/A
##
proc k_mbox_data_get*(rx_msg: ptr k_mbox_msg; buffer: pointer) {.
    importc: "k_mbox_data_get", header: "kernel.h".}
